--- a/Style.css
+++ b/Style.css
@@ -1,7 +1,9 @@
 header,
 footer {
   background-color: #bf1f38ff;
+  border: 3px solid black;
 }
+
 
 .logo_cambridge-public-library {
   display: block;
@@ -11,6 +13,7 @@ footer {
 }
  
 
+
 .sidebar   {
   display: block;
   margin-left: auto;
@@ -18,15 +21,18 @@ footer {
   width: 33%;
 }
 
+
 .slideshow {
     padding-top: 1%;
     display: block;
-    
+   
 }
+
 
 body{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
 
 a {
   color: black;
