--- a/Style.css
+++ b/Style.css
@@ -38,3 +38,12 @@ a {
   color: black;
   text-decoration: none;
 }
+
+
+.slideshow {
+  background-color: #595959;
+}
+
+  .whats-happening {
+    background-color: #FFFFFF;
+  }
